fix overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,14 +326,19 @@ header {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+
 .skills {
   background-color: #EAEAEA;
   border-radius: 25px;
  
   margin-bottom: 7rem;
   width: 80%;
-  margin-top: 1rem;
+  
+  padding:2rem;
+
+
   margin: 0 auto;
+  margin-top: 2rem;
 }
 
 .skills-container,
@@ -514,17 +519,14 @@ header {
     width: 80%;
   }
 
-  section {
-    height: 100vh;
-    
-  }
+ 
 
   section h2{
     font-size:2rem;
   }
 
   .about-me h2{
-    text-align: left;
+    
     margin-bottom:0px;
   }
 
@@ -545,8 +547,10 @@ header {
   .skills {
     height: 50%;
     padding:10px;
+
+    top:2rem;
     border:1px solid black;
-    margin-top: -15rem;
+   
   }
 }
 
